Add link to video tutorial and swap in generic THEOplayer demo SDK that can only be used on localhost

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
     <title>Verizon Media stream configuration generator</title>
-    <link rel="stylesheet" type="text/css" href="https://cdn.myth.theoplayer.com/55d71743-4924-4d1b-8440-78f9cd103879/ui.css">
-    <script type="text/javascript" src="https://cdn.myth.theoplayer.com/55d71743-4924-4d1b-8440-78f9cd103879/THEOplayer.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.theoplayer.com/dash/theoplayer/ui.css">
+    <script type="text/javascript" src="https://cdn.theoplayer.com/dash/theoplayer/THEOplayer.js"></script>
     <style>
         * {
             box-sizing: border-box;
@@ -67,7 +67,7 @@
             width: '500px',
             height: '500px'
         },
-        libraryLocation: 'https://cdn.myth.theoplayer.com/55d71743-4924-4d1b-8440-78f9cd103879/'
+        libraryLocation: 'https://cdn.theoplayer.com/dash/theoplayer/'
     });
 
     const configureButton = document.querySelector("#configureStream");
