Add support for multiple asset IDs. Users can enter multiple asset IDs through a comma-seperated list in the GUI.

--- a/public/index.html
+++ b/public/index.html
@@ -75,10 +75,11 @@
 
     function convertBackEndConfigurationToTHEOplayerConfiguration(configuration) {
         const assetTypes = {'a': 'asset', 'c': 'channel', 'e': 'event'}
+        const ids = configuration.id.split(",");
         return {
             sources: {
                 integration: 'verizon-media',
-                id: configuration.id,
+                id: ids,
                 preplayParameters: configuration.preplayParameters,
                 assetType: assetTypes[configuration.type],
                 contentProtected: configuration.drm
